# aetheryte

./: Cargo.toml  Dockerfile  Readme.md
.cargo/: config
.devcontainer/: devcontainer.json
.github/workflows/: docker-publish.yml
src/: main.rs
src/dns/: cache.rs  custom.rs  doh.rs  dot.rs  mod.rs  server.rs  settings.rs  tcp.rs  udp.rs  utils.rs
src/dns/lookup/: doh.rs  mod.rs  tcp.rs  udp.rs  utils.rs
src/router/: geoip.rs  mod.rs  passthrough.rs  proxy.rs  utils.rs
