[package]
name = "aetheryte"
version = "0.1.0"
authors = ["Icmeic Jia <bingfeng.web@gmail.com>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
libc = "0.2.73"
nix = "0.18.0"
tokio = { version = "0.3.6", features = ["full"] }
tokio-rustls = "0.21.1"
rustls-native-certs = "0.5.0"
maxminddb = "0.14.0"
futures = "0.3.0"
ctrlc = { version = "3.1.7", features = ["termination"] }
domain = { version = "0.5.3", features = ["bytes"]}
bytes = "0.5.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13"
# trust-dns-server = { version = "0.19.6" }
# trust-dns-resolver = { version = "0.19.6" }