[package]
authors = ["Icmeic Jia <bingfeng.web@gmail.com>"]
edition = "2018"
license = "GPL-3.0"
name = "aetheryte"
version = "0.1.0"

[dependencies]
ctrlc = {version = "3.1", features = ["termination"]}
domain = "0.5"
futures = "0.3"
libc = "0.2"
maxminddb = "0.17"
nix = "0.19"
rustls-native-certs = "0.5"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1", features = ["full"]}
tokio-rustls = {version = "0.22", features = ["early-data"]}
